# agent-run-report

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: privacy_redaction.md  report_schema.md
examples/: sample_report.json  sample_report.md
src/agent_run_report/: __init__.py  cli.py  git_utils.py  json_writer.py  log_parser.py  markdown_writer.py  redaction.py  report_model.py
tests/: test_cli.py  test_git_utils.py  test_log_parser.py  test_markdown_writer.py  test_redaction.py  test_report_model.py
