[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-run-report"
version = "0.1.0"
description = "Generate clean Markdown and JSON reports from local coding-agent runs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "agent-run-report contributors" }
]
keywords = ["codex", "coding-agent", "cli", "automation", "reports"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
agent-run-report = "agent_run_report.cli:main"

[project.urls]
Homepage = "https://github.com/PlutoYQ-NTU/agent-run-report"
Issues = "https://github.com/PlutoYQ-NTU/agent-run-report/issues"

[tool.setuptools.packages.find]
where = ["src"]
